adjust main.html

--- a/dev/htmlTemplate/homepageBody.html
+++ b/dev/htmlTemplate/homepageBody.html
@@ -47,7 +47,9 @@
 
             <div class="left-background" data-1799="opacity:0;transform:translateX(-70%);display:none;"
                 data-1800="opacity:1;transform:translateX(-70%);display:block;"
-                data-2450="opacity:1;transform:translateX(-3%);display:block;">
+                data-2450="opacity:1;transform:translateX(-3%);display:block;"
+                data-2800="opacity:1;transform:translateX(-3%);display:block;"
+                data-3300="opacity:0;transform:translateX(-3%);display:block;">
                 <!-- 卡片加在這-->
                 <div id="homePageGroup" class="firstPageGroupCardsPart">
                     <!-- 揪團卡片 -->
@@ -119,6 +121,8 @@
                             </div>
                         </a>
                     </div>
+                </div>
+            </div>
                     <!-- spot cards end-->        
             <div class="right-background2-content" data-2950="opacity:0;transform:translateY(110%) translateX(-130%);"
                 data-3600="opacity:1;transform:translateY(0) translateX(-130%);">
