進入會員專區判斷

--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -14,7 +14,7 @@
         <a class="nav-link active nav-linkplan" href="plan.html">排行程</a>
         <a class="nav-link nav-linkgroupView" href="groupView.html">揪團</a>
         <a class="nav-link nav-linkblogView" href="blogView.html">遊記</a>
-        <a class="nav-link nav-linkMember" href="member.html">會員專區</a>
+        <a class="nav-link nav-linkMember" id="nav-linkMember">會員專區</a>
       </div>
       <div class="navRight">
         <a id="aLogin" class="nav-link" style="text-decoration: none;" data-toggle="modal" data-target="#loginForm"><img src="./images/login.png" alt="">登入</a>
