hotshce ajax done

--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -9,6 +9,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 </script>
 
+
 <body>
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/slider.html')
@@ -24,6 +25,7 @@
 
 </body>
 <script src="./js/carousel.js"></script>
+<!-- <script src="./js/hotsche_groupView.js"></script> -->
 <script>
     let setupGroup = document.getElementById("setupGroup");
 
