--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@
         font-weight: 500;
         background-color: #fce4ec;
         -webkit-font-smoothing: antialiased;
-        background: linear-gradient(-45deg, white, #ffca85, #fb4e82, #756de6, #abd666, white);
+        background: linear-gradient(-45deg, white, rgb(231, 87, 130), white);
 	    background-size: 400% 400%;
 	    animation: gradient 15s ease infinite;
     }
@@ -196,7 +196,7 @@
     display: block;
     color: black;
     -webkit-animation: slide-in 2s both ;
-    font-size: 25px;
+    font-size: 20px;
     }
     .letters {
     position: relative;
@@ -235,7 +235,7 @@
     100% {
         -webkit-transform: translateX(0);
         -webkit-animation-timing-function: ease-out;
-        color: #007;
+        color: black;
         text-shadow: 2px 4px 10px whitesmoke;
     }
     }
@@ -315,7 +315,6 @@
     <div style="width:100px;margin:0 auto;">
         <img src="./images/logo.png" alt="" style="width: 100%;">
     </div>
-    <!-- <h1 class="title">自助大丈夫</h1> -->
     <div class='wrapper'>
         <h4 class='happy'>EasyPlanningTrip</h4>
         <h3 class='letters'>
@@ -324,7 +323,6 @@
           <span class='letter'>大</span>
           <span class='letter'>丈</span>
           <span class='letter'>夫</span>
-          <!-- <span class='letter'>Y</span> -->
         </h3>
     </div>
 
