--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -52,17 +52,11 @@
                         </td>
                         <td>
                             <select name="groupView_FliterPpl">
-                                <option value="1" selected>1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="">4</option>
-                                <option value="">5</option>
-                                <option value="">6</option>
-                                <option value="">7</option>
-                                <option value="">8</option>
-                                <option value="">9</option>
-                                <option value="">10</option>
-                                <option value="">10人以上</option>
+                                <option value="1" selected>5人以下</option>
+                                <option value="2">6-10人</option>
+                                <option value="3">10-15人</option>
+                                <option value="">15-20人</option>
+                                <option value="">20人以上</option>
                             </select>
                         </td>
                     </tr>
@@ -99,8 +93,8 @@
                         <td>
                             <select name="groupView_FliterDay">
                                 <option value="1" selected>1</option>
-                                <option value="2">1~5</option>
-                                <option value="3">5~10</option>
+                                <option value="2">1-5</option>
+                                <option value="3">5-10</option>
                                 <option value="">10以上</option>
                             </select>
                         </td>
