--- a/dev/distanceMatrix2.html
+++ b/dev/distanceMatrix2.html
@@ -187,6 +187,7 @@
           getSearchedAttractionsFromPHP(x) {
             $.get(`searchAttrac.php?searchedName=${x}`).then((data) => {
               this.searchedAttractions = JSON.parse(data);
+              console.log(this.searchedAttractions);
             });
           },
           addSelectedAttractionsToDirection(x) {
@@ -316,7 +317,7 @@
                       <div class="container py-0">
                         <div class="row justify-content-between">
                           <p @click.stop="sendSelectedAttractionToAttractionList" id="addToSchedule" class=" p-1 m-0" style="color:#bc2654; font-size:0.8rem;cursor:pointer;">+ 加入行程</p>
-                          <i @click.stop="sendSelectedAttractionToAttractionList3" class="p-1 pt-2 m-0 mr-2 far fa-heart" style="color:#bc2654; font-size:0.8rem;cursor:pointer;"></i>
+                          <i :class="alreadyKeep" @click.stop="sendSelectedAttractionToAttractionList3" class="p-1 pt-2 m-0 mr-2 far fa-heart" style="color:#bc2654; font-size:0.8rem;cursor:pointer;"></i>
                         </div>
                       </div>
                     </card>
@@ -332,6 +333,13 @@
           sendSelectedAttractionToAttractionList3(e) {
             this.$emit("def3", this.label);
             e.target.classList.add("fas");
+          },
+        },
+        computed: {
+          alreadyKeep() {
+            if (this.label.Keep_Attrac_NO != null) {
+              return "fas";
+            }
           },
         },
       });
