blog carousel ajax done

--- a/dev/blogView.html
+++ b/dev/blogView.html
@@ -3,18 +3,19 @@
 @@include('./htmlTemplate/head.html')
 
 <style>
-    .nav-linkblogView::after{
-      width: 100% !important;
-    }
+  .nav-linkblogView::after {
+    width: 100% !important;
+  }
 </style>
 
 <body>
-    @@include('./htmlTemplate/nav.html')
-    @@include('./htmlTemplate/slider.html')
-    @@include('./htmlTemplate/mainBlogView.html')
-    @@include('./htmlTemplate/footer.html')
-    
-    
+  @@include('./htmlTemplate/nav.html')
+  @@include('./htmlTemplate/sliderBlog.html')
+  @@include('./htmlTemplate/mainBlogView.html')
+  @@include('./htmlTemplate/footer.html')
+
+
 </body>
+<script src="./js/carouselBlog.js"></script>
 
 </html>
