group page dropdown option update

--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -95,7 +95,7 @@
                                 <option value="1" selected>1</option>
                                 <option value="2">1-5</option>
                                 <option value="3">5-10</option>
-                                <option value="">10以上</option>
+                                <option value="4">10以上</option>
                             </select>
                         </td>
                     </tr>
