--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -33,7 +33,7 @@
           <a href="plan.html">排行程</a> 
           <a href="groupView.html">揪團</a>
           <a href="blogView.html">遊記</a>
-          <a href="member.html">會員專區</a>
+          <a id="navSmallMember">會員專區</a>
         </div>
       </div>
       <a class="navSmallCenter" href="main.html"><img src="./images/logo.png" alt=""></a>
