--- a/dev/blogInside.html
+++ b/dev/blogInside.html
@@ -3,9 +3,7 @@
 @@include('./htmlTemplate/head.html')
 
 <body>
-    @@include('./htmlTemplate/nav.html') 
-    @@include('./htmlTemplate/blogShow.html') 
-    @@include('./htmlTemplate/footer.html')
+    @@include('./htmlTemplate/nav.html') @@include('./htmlTemplate/blogShow.html') @@include('./htmlTemplate/footer.html')
 </body>
 
 </html>
