--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -13,18 +13,18 @@
     </div>
     <hr />
     <div class="chooseBlock row">
-        <button class="groupFBtn col-3 col-md-2 ">
+        <button class="groupFBtn col-3 col-md-2">
             最新刊登 &darr;
         </button>
-        <button class="groupFBtn col-3 col-md-2 ">
+        <button class="groupFBtn col-3 col-md-2">
             最高評價 &darr;
         </button>
 
         <!-- 手機版篩選器開始 -->
-        <div class="d-flex mobileFilter col-3 col-md-3 col-lg-1 d-none d-sm-block d-md-none">
+        <div class="d-flex mobileFilter col-3 col-md-3 col-lg-1 d-none
+            d-sm-block d-md-none">
             <div class="dropdown mr-1">
-                <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+                <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
                     篩選
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
@@ -38,7 +38,7 @@
         </div>
         <!-- 手機版篩選器結尾 -->
     </div>
-    <div class="mainGroupView row d-flex ">
+    <div class="mainGroupView row d-flex">
         <div class="groupViewLeft col-sm-3 d-none d-sm-none d-md-block">
             <!-- fliter Start -->
             <div class="fliterBlock">
@@ -159,7 +159,7 @@
             </div>
             <!-- Hot Schedule End -->
         </div>
-        <div class="groupViewRight col-9 d-block ">
+        <div class="groupViewRight col-9 d-block">
             <!-- Group Main Start -->
             <!-- pc version start  -->
             <div class="groupViewPCcardBlock d-md-flex d-none">
@@ -168,25 +168,25 @@
                     <!-- <a  onclick="openpartinGroup();"> -->
                     <a href="./groupInside.html">
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                        <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                        <div class="card-body card-img-overlay
+                            cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
                             <div class="mask">
-                                <p class="card-text cardTextWebUse">日月潭<br><span
-                                        style="font-weight: 300;">九族文化村和健行步道</span></p>
+                                <p class="card-text cardTextWebUse">{{groupCardsAlls.Group_title}}<br></p>
                             </div>
                         </div>
                         <div>
                             <div class="cardGroupContent">
-                                <p>團主：愛旅行</p>
+                                <p>團主：{{groupCardsAlls.Mem_Name}}</p>
                                 <div>
                                     <p>團主評價：
-                                        <img src="./images/good.png" alt="">
+                                        <img src="./images/good.png" alt=""> {{groupCardsAlls.hostlike}}
                                     </p>
 
                                 </div>
-                                <p>出團日期：2020/06/30</p>
+                                <p>出團日期：{{groupCardsAlls.Group_StartDate}}</p>
                                 <div>
-                                    <p>報名截止：2020/06/30</p>
+                                    <p>報名截止：{{groupCardsAlls.Group_Deadline}}</p>
                                     <a>
                                         <img src="./images/heart.png" alt="">
                                     </a>
@@ -196,16 +196,15 @@
                     </a>
                 </div>
                 <!-- 揪團卡片 -->
-                <div class="card cardOriginalTem cardGroup ">
+                <!-- <div class="card cardOriginalTem cardGroup">
                     <a>
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                        <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                        <div class="card-body card-img-overlay
+                            cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
                             <div class="mask">
-                                <p class="card-text cardTextWebUse">日月潭<br><span
-                                        style="font-weight: 300;">九族文化村和健行步道</span></p>
+                                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -226,26 +225,22 @@
                             </div>
                         </div>
                     </a>
-                </div>
-
-
-
-
+                </div> -->
             </div>
             <!-- pc version end -->
             <!-- phone vision start -->
             <div class="groupPhoneCardCarousel d-xl-none d-lg-none d-md-none">
                 <div id="carouselPhoneGroupControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner innerCardScheGroupPhoneSlide">
-                        <div class="carousel-item active ">
+                        <div class="carousel-item active">
                             <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                                 <a>
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
                                         <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span>
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                             </p>
                                         </div>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -273,14 +268,15 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="card cardOriginalTem cardGroup d-block " style="width: 18rem;">
+                            <div class="card cardOriginalTem cardGroup d-block" style="width:
+                                18rem;">
                                 <a>
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
                                         <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span>
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                             </p>
                                         </div>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -311,11 +307,11 @@
                             <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
                                 <a href="">
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
                                         <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span>
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span>
                                             </p>
                                         </div>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
@@ -344,11 +340,13 @@
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselPhoneGroupControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon groupCarouselIcon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselPhoneGroupControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon groupCarouselIcon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
@@ -357,42 +355,14 @@
                 <div id="carouselPhoneScheControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner innerCardSchePhoneSlide">
                         <div class="carousel-item active fixHeight4others">
-                            <div class="card  cardOriginalTem cardSchedule" style="width: 18rem;">
+                            <div class="card cardOriginalTem cardSchedule" style="width: 18rem;">
                                 <a href="">
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">行程</h5>
                                         <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span></p>
-                                        </div>
-                                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                                    </div>
-                                    <div>
-                                        <div class="cardScheduleContent">
-                                            <p>319人氣</p>
-                                            <div>
-                                                <a href="">
-                                                    <p>+加入行程</p>
-                                                </a>
-                                                <a href="">
-                                                    <img src="./images/heart.png" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="card  cardOriginalTem cardSchedule" style="width: 18rem;">
-                                <a href="">
-                                    <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
-                                        <h5 class="card-title cardTitleWebUse">行程</h5>
-                                        <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span></p>
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                                         </div>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
@@ -416,11 +386,39 @@
                             <div class="card cardOriginalTem cardSchedule" style="width: 18rem;">
                                 <a href="">
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">行程</h5>
                                         <div class="mask">
-                                            <p class="card-text cardTextWebUse">日月潭<br><span
-                                                    style="font-weight: 300;">九族文化村和健行步道</span></p>
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
+                                        </div>
+                                        <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                                    </div>
+                                    <div>
+                                        <div class="cardScheduleContent">
+                                            <p>319人氣</p>
+                                            <div>
+                                                <a href="">
+                                                    <p>+加入行程</p>
+                                                </a>
+                                                <a href="">
+                                                    <img src="./images/heart.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card cardOriginalTem cardSchedule" style="width: 18rem;">
+                                <a href="">
+                                    <img src="./images/lake.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body card-img-overlay
+                                        cardImgOverlayWebUse">
+                                        <h5 class="card-title cardTitleWebUse">行程</h5>
+                                        <div class="mask">
+                                            <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
                                         </div>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                                     </div>
@@ -442,11 +440,13 @@
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselPhoneScheControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon groupCarouselIcon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselPhoneScheControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon groupCarouselIcon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon
+                            groupCarouselIcon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
