--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -24,7 +24,7 @@
 </body>
 <script src="./js/carousel.js"></script>
 <!-- <script src="./js/hotsche_groupView.js"></script> -->
-<script scr="./js/groupCard.js"></script>
+<script src="./js/groupCard.js"></script>
 <script>
     let setupGroup = document.getElementById("setupGroup");
 
